<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientActivity">

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#F44336"
        android:hapticFeedbackEnabled="true"
        android:text="@string/signOut"
        app:layout_constraintEnd_toStartOf="@+id/btnRevokeAccess"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRevokeAccess"
        android:layout_width="67dp"
        android:layout_height="41dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#5EF44336"
        android:hapticFeedbackEnabled="true"
        android:text="@string/revokeAccess"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGoogleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/tvGoogleIDHeading"
        app:layout_constraintTop_toBottomOf="@+id/tvGoogleName" />

    <TextView
        android:id="@+id/tvGoogleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvGoogleNameHeader"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGoogleNameHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPatientIDHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:gravity="center|center_horizontal"
        android:text="@string/patientID"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGoogleID" />

    <EditText
        android:id="@+id/etPatientID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:digits="0123456789"
        android:ems="10"
        android:gravity="center|center_horizontal"
        android:hint="@string/etPatientID"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPatientIDHeading" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#9E757272"
        android:hapticFeedbackEnabled="true"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="@+id/etPatientID"
        app:layout_constraintTop_toBottomOf="@+id/tvNote" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:hapticFeedbackEnabled="true"
        android:text="@string/cont"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etPatientID"
        app:layout_constraintTop_toTopOf="@+id/btnClear" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnContinue" />

    <TextView
        android:id="@+id/tvGoogleIDHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/yourGoogleID"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/tvGoogleNameHeader"
        app:layout_constraintTop_toBottomOf="@+id/tvGoogleNameHeader" />

    <ImageView
        android:id="@+id/ivError"
        android:layout_width="25dp"
        android:layout_height="26dp"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toStartOf="@+id/tvError"
        app:layout_constraintTop_toBottomOf="@+id/btnContinue"
        app:srcCompat="@android:drawable/ic_delete"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPatientID" />
</androidx.constraintlayout.widget.ConstraintLayout>