<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#F44336"
        android:hapticFeedbackEnabled="true"
        android:text="@string/signOut"
        app:layout_constraintEnd_toStartOf="@+id/btnRevokeAccess"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRevokeAccess"
        android:layout_width="67dp"
        android:layout_height="41dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#5EF44336"
        android:hapticFeedbackEnabled="true"
        android:text="@string/revokeAccess"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGoogleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/tvGoogleIDHeading"
        app:layout_constraintTop_toBottomOf="@+id/tvGoogleName" />

    <TextView
        android:id="@+id/tvGoogleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvGoogleNameHeader"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGoogleNameHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGoogleIDHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/yourGoogleID"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/tvGoogleNameHeader"
        app:layout_constraintTop_toBottomOf="@+id/tvGoogleNameHeader" />

    <TextView
        android:id="@+id/patientIDHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFEB3B"
        android:gravity="center_vertical"
        android:text="@string/patientID"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvGoogleIDHeading"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvGoogleIDHeading"
        app:layout_constraintTop_toBottomOf="@+id/tvGoogleIDHeading" />

    <TextView
        android:id="@+id/tvPatientID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="#FFEB3B"
        android:gravity="center_horizontal|left"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvGoogleID"
        app:layout_constraintTop_toBottomOf="@+id/tvGoogleID" />

</androidx.constraintlayout.widget.ConstraintLayout>